# hypomap-exploration

./: .gitignore  CLAUDE.md  README.md  Snakefile  pyproject.toml  requirements.txt
app/: __init__.py  app.py  callbacks.py  layouts.py  plotly-cloud.toml  requirements.txt
app/assets/: custom.css  tooltip.js
app/data/processed/mouse_abc/: coronal_atlas_regions.json
data/processed/: genes.parquet
data/processed/mouse_abc/: cells_with_coords.parquet  cluster_ligand_receptor_profile.parquet  cluster_np_expression.parquet  coronal_atlas_regions.json  genes.parquet  ligand_receptor_genes_missing.txt  neuropeptide_genes_missing.txt
data/processed/mouse_common/: connectivity_experiment_metadata.csv  hypothalamus_connectivity.csv  hypothalamus_connectivity_summary.csv  hypothalamus_structures.csv
hypomap/: diversity.py
hypomap/atlas/: __init__.py  allen_api.py  region_mapping.py
hypomap/datasets/: __init__.py  base.py  loader.py  mouse_abc.py
hypomap/preprocessing/: assign_coordinates.py  build_cluster_ligand_receptor_map.py  build_cluster_np_expression.py  build_lateralized_regions.py  downsample.py
notebooks/: compare_coordinates.py  compare_region_algorithms.py  compare_wired_wireless_connectome.py  heterogeneity_map.py  human_hypomap_cell2location.ipynb  proposed_bounding_boxes.py  validate_ligand_receptor_expression.ipynb  validate_ligand_receptor_expression.py  validate_sdi.py
scripts/: export_notebook.py  sync_app_data.py
src/: __init__.py  diversity.py
src/datasets/: human_hypomap.py  loader.py  mouse_abc.py  mouse_hypomap.py
src/preprocessing/: __init__.py  assign_coordinates.py  build_cluster_ligand_receptor_map.py  build_cluster_np_expression.py  build_gene_descriptions.py  build_lateralized_regions.py  build_ligand_receptor_list.py  downsample.py  extract_human_visium.py  extract_hypothalamus_connectivity.py
tests/: test_box_finder.py
