[project]
name = "hypomap"
version = "0.1.0"
description = "Interactive 3D visualization of hypothalamus single-cell atlases"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "dash[cloud]>=2.14.0",
    "dash-bootstrap-components>=1.5.0",
    "plotly>=5.18.0",
    "pandas>=2.1.0",
    "numpy>=1.24.0,<2.0.0",
    "scipy>=1.10.0",
    "scanpy>=1.9.6",
    "anndata>=0.10.0",
    "pyarrow>=14.0.0",
    "trimesh>=4.0.0",
    "scikit-image>=0.22.0",
    "abc-atlas-access @ git+https://github.com/AllenInstitute/abc_atlas_access.git",
    "marimo>=0.19.4",
    "geopandas>=1.1.2",
    "alphashape>=1.3.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
]

[project.scripts]
fireitup = "app.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app", "src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
